fix: got rid of auto margins which pushed legend too low

--- a/assets/style.css
+++ b/assets/style.css
@@ -301,7 +301,6 @@ li {
 	min-height: 300px;
 	height: 100%;
 	width: 100%;
-	margin: auto;
 }
 
 #month-svg {
